test(other): 修改homepage

--- a/package.json
+++ b/package.json
@@ -50,5 +50,5 @@
   "bugs": {
     "url": "https://github.com/AfinaLn/vue3-next/issues"
   },
-  "homepage": "https://github.com/AfinaLn/vue3-next#readme"
+  "homepage": "https://AfinaLn.github.io/vue3-next-demo"
 }
